# opencv-opencl

./: CMakeLists.txt  Dockerfile  README.md  build_conan_package.sh  conan_add.sh  conanfile.txt  docker-compose.yaml  main.cpp
recipes/opencv/: config.yml
recipes/opencv/4.3.0/: conandata.yml  conanfile.py
recipes/opencv/4.3.0/test_package/: CMakeLists.txt  test_package.cpp
recipes/opencv_mkl/4.5.1/: conanfile.py
